fix #1021 issue, removed fixed hieght to cause profile card to not stretch img

--- a/app/assets/stylesheets/components/dashboard/profile_card.scss
+++ b/app/assets/stylesheets/components/dashboard/profile_card.scss
@@ -11,7 +11,6 @@
 
   &__image {
     width: 100px;
-    height: 100px;
     background-color:#fff;
     border-radius:50%;
     margin-right: 2rem;
